@@ -35,6 +35,8 @@ debian-installer (20040505) UNRELEASED; urgency=low
       type substituted in at build time.
     - Remove redundant discover1-udeb and discover1-data-udeb from powerpc
       monolithic list.
+    - Add cramfs initrd support, although it won't be bootable until #244589
+      in busybox-cvs is fixed.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  4 May 2004 16:56:04 -0400
 
